--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ name: Release Actions
 
 on:
   release:
-    types: [published]
+    types: [ published ]
 
 jobs:
   handle-docker-images:
@@ -196,6 +196,9 @@ jobs:
         with:
           github_token: ${{ secrets.GH_TOKEN }}
           branch: ${{ env.BRANCH }}
+
+      - name: Pull latest changes
+        run: git pull origin ${{ env.BRANCH }}
 
       - name: Checkout repository
         uses: actions/checkout@v2
