--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 Dockerfile linguist-detectable=true
-§§template§§*.mcfunction linguist-language=dockerfile
+*.html linguist-detectable=false
+*.js linguist-detectable=false
+*.css linguist-detectable=false
