--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -171,6 +171,7 @@ jobs:
 
   handle-file-uploads:
     runs-on: ubuntu-latest
+    needs: handle-docker-images
 
     steps:
       - name: Checkout repository
