--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -169,7 +169,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
-  handle-file-uploads:
+  handle-file-updates:
     runs-on: ubuntu-latest
     needs: handle-docker-images
 
